# aiu-fms-testing-utils

./: .gitignore  README.md  RELEASING.md  pyproject.toml  requirements.txt  setup.py  test_encoder.py
.github/workflows/: build-and-publish.yml  lint.yml
aiu_fms_testing_utils/testing/: validation.py
aiu_fms_testing_utils/utils/: __init__.py  aiu_setup.py  args_parsing.py  encoders_utils.py  fp8_attention.py  metrics_utils.py  model_setup.py  paged.py  quantization_setup.py
scripts/: README.md  encoders_inference.py  generate_all_metrics.py  generate_all_metrics_dist.py  generate_layers_metrics.py  generate_metrics.py  get_thresholds.py  inference.py  roberta.py  run_encoders.py  small-toy.py  validation.py
tests/: LAYERS.md  MODEL.md  README.md
tests/models/: conftest.py  test_decoders.py  test_encoders.py  test_model_expectations.py  test_scripts.py  test_shapes.py
tests/resources/: get_thresholds.py  sample_layer_th.json  test_decoders_config.json
tests/resources/expectations/: models.test_model_expectations.TestAIUDecoderModels.Llama-3.1-70B-Instruct.test_model_output  models.test_model_expectations.TestAIUDecoderModels.Llama-3.1-8B-Instruct.test_model_output  models.test_model_expectations.TestAIUDecoderModels.Llama-3.1-8B-Instruct.test_model_weight_keys  models.test_model_expectations.TestAIUDecoderModels.Mistral-7B-Instruct-v0.3.test_model_output  models.test_model_expectations.TestAIUDecoderModels.Mistral-7B-Instruct-v0.3.test_model_weight_keys  models.test_model_expectations.TestAIUDecoderModels.granite-20b-code-instruct-8k.test_model_weight_keys  models.test_model_expectations.TestAIUDecoderModels.granite-3.2-8b-instruct.test_model_output  models.test_model_expectations.TestAIUDecoderModels.granite-3.2-8b-instruct.test_model_weight_keys  models.test_model_expectations.TestAIUDecoderModels.granite-guardian-3.1-8b.test_model_output  models.test_model_expectations.TestAIUDecoderModels.granite-guardian-3.1-8b.test_model_weight_keys  models.test_model_expectations.TestAIUMicroDecoderModels.granite-3.2-8b-instruct.test_model_output  models.test_model_expectations.TestAIUModels.--tmp--models--granite-3-8b-base.test_model_output  models.test_model_expectations.TestAIUModels.--tmp--models--granite-7b-base.test_model_output  models.test_model_expectations.TestAIUModels.--tmp--models--llama-194m.test_model_output  models.test_model_expectations.TestAIUModels.Llama-3.1-70B-Instruct.test_model_output  models.test_model_expectations.TestAIUModels.granite-20b-code-instruct-8k.test_model_output  models.test_model_expectations.TestAIUModels.granite-20b-code-instruct-8k.test_model_weight_keys  models.test_model_expectations.TestAIUModels.granite-3-8b-base.test_model_weight_keys  models.test_model_expectations.TestAIUModels.granite-8b-code-base.test_model_output  models.test_model_expectations.TestAIUModels.granite-8b-code-base.test_model_weight_keys  models.test_model_expectations.TestAIUModels.granite-guardian-3.1-8B.test_model_output  models.test_model_expectations.TestAIUModels.granite-guardian-3.1-8B.test_model_weight_keys  (+3 more)
tests/resources/prompts/granite/input/: 00.txt  (+69 more)
tests/testing/: test_validation.py
tests/utils/: test_paged.py  test_sampling.py
(+763 files in other folders)
