[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"
    ]

[project]
name = "aiu-fms-testing-utils"
dynamic = ["version"]
description = "Spyre FMS Testing Utils"
authors = [
  {name = "Thara Palanivel", email = "Tharangini.Palanivel@ibm.com"},
  {name = "Ted Chang", email = "htchang@us.ibm.com"},
]
license = "Apache-2.0"
readme = "README.md"
requires-python = "~=3.12"
keywords = ['aiu-fms-testing-utils', 'python', 'utils']
classifiers=[
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
"ibm-fms @ git+https://github.com/foundation-model-stack/foundation-model-stack@main",
"fms-model-optimizer @ git+https://github.com/foundation-model-stack/fms-model-optimizer@main",
"sentencepiece",
"numpy",
"transformers",
]

[project.optional-dependencies]
dev = ["wheel>=0.42.0,<1.0", "packaging>=23.2,<25"]

[tool.setuptools_scm]
version_file = "aiu_fms_testing_utils/_version.py"

[project.urls]
Homepage = "https://github.com/foundation-model-stack/aiu-fms-testing-utils"
Repository = "https://github.com/foundation-model-stack/aiu-fms-testing-utils"
Issues = "https://github.com/foundation-model-stack/aiu-fms-testing-utils/issues"
